tests/snapshots/command__long_flag.snap
---
source: tests/command.rs
expression: output
---
claptrap_subcommand='sync'
claptrap_sync_search='true'
