tests/snapshots/command__long_version.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_7638c95c'
myprog v0.1.24 commit: abcdef89726d
revision: 123
release: 2
binary: myprog
EOF_7638c95c
exit 0
