tests/snapshots/command__next_display_order.snap
---
source: tests/command.rs
expression: output
---
command cat <<'EOF_63925467'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
  [1m-a[0m, [1m--airplane[0m <airplane>  I should be first!
  [1m-?[0m                         Alt help
  [1m-h[0m, [1m--help[0m                 Print help
EOF_63925467
exit 0
