tests/snapshots/command__next_help_heading.snap
---
source: tests/command.rs
expression: output
---
command cat <<'EOF_02f3f945'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--config[0m <cfg>  Some help text describing the --config arg
  [1m-h[0m, [1m--help[0m          Print help
EOF_02f3f945
exit 0
