tests/snapshots/command__no_args.snap
---
source: tests/command.rs
expression: output
---
command cat <<'EOF'
[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF
exit 0
