tests/snapshots/command__propagate_version.snap
---
source: tests/command.rs
expression: output
---
command cat <<'EOF'
myprog-test v1.1
EOF
exit 0
