tests/snapshots/command__subcommand.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
claptrap_subcommand_nested_arg3='value'
